--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,14 @@ dependencies {
     // Navigation compose
     implementation "androidx.navigation:navigation-compose:2.6.0"
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+
+    //Retrofit2
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
+
+    //Okhttp3
+    implementation "com.squareup.okhttp3:okhttp:3.14.9"
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
 }
 
 kapt {
