--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,9 @@ dependencies {
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
 
+    // Compose Constraint Layout
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
+
     // Hilt
     implementation "com.google.dagger:hilt-android:2.44"
     kapt "com.google.dagger:hilt-compiler:2.44"
@@ -84,21 +87,24 @@ dependencies {
     implementation "androidx.navigation:navigation-compose:2.6.0"
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
 
-    //Retrofit2
+    // Retrofit2
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
 
-    //Moshi
+    // Moshi
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
 
-    //Okhttp3
-    implementation "com.squareup.okhttp3:okhttp:3.14.9"
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
+    // Okhttp3
+    implementation "com.squareup.okhttp3:okhttp:5.0.0-alpha.10"
+    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.10'
 
-    //Mokito
+    // Mokito
     testImplementation 'org.mockito:mockito-core:5.3.1'
 
-    //Test Coroutines
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
+    // Test Coroutines
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.1"
+
+    // Coil
+    implementation "io.coil-kt:coil-compose:2.4.0"
 }
 
 kapt {
